--- a/falterboysite.css
+++ b/falterboysite.css
@@ -26,6 +26,11 @@ li {
 }
 h2 { 
 text-align: center;
+margin-top: 25px;
+margin-right: 25px;
+margin-bottom: 25px;
+margin-left: 25px;
+
  }
 
 #vintage {
