--- a/falterboysite.css
+++ b/falterboysite.css
@@ -38,6 +38,7 @@ margin-left: 25px;
   margin-left: auto;
   margin-right: auto;
   width:50%;
+  padding-top: 50px;	
 }
  .belowpic {
   padding-top: 50px;
