--- a/falterboysite.css
+++ b/falterboysite.css
@@ -3,6 +3,7 @@
 body {
 	background-image: url ("Falterboy-site/falterboy Hi Res.jpg");
 	text-align: center;
+	height: 500px;
 	background-size: contain; 
 }
 
