--- a/falterboysite.css
+++ b/falterboysite.css
@@ -4,7 +4,7 @@ body {
 	background-image: url ("Falterboy-site/falterboy Hi Res.jpg");
 	text-align: center;
 	height: 300px;
-	background-size: contain; 
+	background-size: cover; 
 }
 
 ul {
