--- a/falterboysite.css
+++ b/falterboysite.css
@@ -3,8 +3,10 @@
 body {
 	background-image: url ("Falterboy-site/falterboy Hi Res.jpg");
 	text-align: center;
-	height: 300px;
-	background-size: cover; 
+	background-size: 150px; 
+	height: 200px;
+	width: 300px;
+	
 }
 
 ul {
