--- a/gallery.css
+++ b/gallery.css
@@ -58,3 +58,40 @@ body {
   place-content: center;
   background: #964c4b;
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+
+  }
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+  
+}
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+.center {
+	margin-top: 500px;
+	text-align: center;
+}
+#vintage {
+  display: block; 
+  height: 800px;
+  width: 800px;
+}
