--- a/gallery.css
+++ b/gallery.css
@@ -1,3 +1,14 @@
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  display: inline;
+  
+}
+
+
+
 li a {
   float: left; 
   display: block;
@@ -14,7 +25,7 @@ li {
   text-align: center;
   padding: 25px 75px;
   text-decoration: none;
-
+}
 
 .gallery {
   --s: 130px; /* control the size of the images*/
