--- a/calender.css
+++ b/calender.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #222;
+    background-color: #b8e2f2;
     color: white;
     padding: 20px;
     font-size: 24px;
