--- a/calender.css
+++ b/calender.css
@@ -24,7 +24,7 @@ header {
 
 .month h2 {
     background-color: #333;
-    color: white;
+    color: #954b4c;
     padding: 10px;
     margin: 0;
     border-radius: 5px;
