--- a/calender.css
+++ b/calender.css
@@ -8,7 +8,7 @@ body {
 
 header {
     background-color: #b8e2f2;
-    color: #954b4c;
+    color: #ffffff;
     padding: 20px;
     font-size: 24px;
 }
