--- a/falterboysite.css
+++ b/falterboysite.css
@@ -17,8 +17,8 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  text-align: center;
-  display: inline;
+  text-align: left;
+  display: inline-block;
   
 }
 li a {
