--- a/falterboysite.css
+++ b/falterboysite.css
@@ -11,6 +11,20 @@ body {
 	text-align: center;
 	display: block;
 }
+.container1 ul {
+    list-style-type: none; 
+    padding: 0;
+    margin: 0;
+    text-align: left; 
+}
+
+.container1 li {
+    float: none;  /* Remove float */
+    display: block;  /* Ensures vertical stacking */
+    text-align: left;
+    padding: 10px 0; /* Adjust spacing */
+}
+
 .container2{
 	padding: 100px;
 }
@@ -23,7 +37,7 @@ ul {
   
 }
 li a {
-  float: left; 
+  float: none; 
   display: block;
   color: black;
   text-align: center;
@@ -32,7 +46,7 @@ li a {
 }
 
 li {
-  float:left; 
+  float: none; 
   display: block;
   color: black;
   text-align: center;
