--- a/gallery.css
+++ b/gallery.css
@@ -104,16 +104,20 @@ body {
 .fa-facebook {
   background: #3B5998;
   color: white;
+  text-align: center;
 }
 
 .fa-twitter {
   background: #55ACEE;
   color: white;
+  text-align: center;
+
   
 }
 .fa-youtube {
   background: #bb0000;
   color: white;
+  text-align: center;
 }
 .center {
 	margin-top: 500px;
