--- a/falterboysite.css
+++ b/falterboysite.css
@@ -1,59 +1,95 @@
-
-
+/* ===== Body and Background ===== */
 body {
-	background-image: url ("Falterboy-site/falterboy Hi Res.jpg");
-	text-align: center;
-	background-size: 150px; 
-	
+  background-image: url("Falterboy-site/falterboy Hi Res.jpg");
+  background-size: 150px;
+  background-repeat: no-repeat;
+  background-position: top center;
+  text-align: center;
 }
-.container1{
-	padding:100px;
-	text-align: center;
-	display: block;
+
+/* ===== Custom Container 1 ===== */
+.container1 {
+  padding: 100px;
+  text-align: center;
+  display: block;
 }
+
 .container1 ul {
-    list-style-type: none; 
-    padding: 0;
-    margin: 0;
-    text-align: left; 
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
 }
 
 .container1 li {
-    float: none !important;  /* Remove float */
-    display: block !important;  /* Ensures vertical stacking */
-    text-align: left;
-    padding: 10px 0; /* Adjust spacing */
+  display: inline-block;
+  text-align: left;
+  padding: 10px 0;
 }
 
-.container2{
-	padding: 100px;
-	text-align: center;
+/* ===== Custom Container 2 ===== */
+.container2 {
+  padding: 100px;
+  text-align: center;
 }
 
-h2 { 
-text-align: center;
-margin-top: 25px;
-margin-right: 25px;
-margin-bottom: 25px;
-margin-left: 25px;
-
- }
-#greeting{
-	padding-bottom: 400px;
+/* ===== Restore Bootstrap Nav Defaults and Customize ===== */
+.nav {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
+.nav-item {
+  margin: 0 10px;
+}
+
+.nav-link {
+  color: black;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+}
+
+/* ===== Headings ===== */
+h2 {
+  text-align: center;
+  margin: 25px;
+}
+
+/* ===== Greeting Section Padding ===== */
+#greeting {
+  padding-bottom: 400px;
+}
+
+/* ===== Image Styling ===== */
 #vintage {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:50%;
-  padding-top: 50px;	
-}
- .belowpic {
+  width: 50%;
+  height: auto;
   padding-top: 50px;
+}
 
- }  
+/* Ensure only one #vintage rule */
+.belowpic {
+  padding-top: 50px;
+}
 
+/* ===== Centering Utility ===== */
+.center {
+  margin-top: 500px;
+  text-align: center;
+}
+
+/* ===== Social Icons ===== */
 .fa {
   padding: 20px;
   font-size: 30px;
@@ -61,11 +97,10 @@ margin-left: 25px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
-
-  }
+}
 
 .fa:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .fa-facebook {
@@ -76,18 +111,13 @@ margin-left: 25px;
 .fa-twitter {
   background: #55ACEE;
   color: white;
-  
 }
+
 .fa-youtube {
   background: #bb0000;
   color: white;
 }
-.center {
-	margin-top: 500px;
-	text-align: center;
-}
-#vintage {
-  display: block; 
+
   height: 800px;
   width: 800px;
 }
